WP-9081 Fixing the author name alignment.

--- a/sass/conditionals/voices-detail.sass
+++ b/sass/conditionals/voices-detail.sass
@@ -663,9 +663,7 @@
             .field-name-field-quote-author
               font-size: 16px
               font-family: $font-sans
-              max-width: 330px
-              +breakpoint($bp-for-phone-tablet-range)
-                max-width: 290px
+              width: auto
 
 .node-type-voices
   .ds-2col-stacked-fluid
